modify the file Coursera notebook and make new file for udemy recommendation system

--- a/notebooks/Coursera-Recommendation-System.ipynb
+++ b/notebooks/Coursera-Recommendation-System.ipynb
@@ -2437,6 +2437,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9522f2ce",
+   "metadata": {},
+   "source": [
+    "### Recommendation Pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 109,
    "id": "9236fe41",
